--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ h1{
 }
 .sec-1{
     display: flex;
-    
 }
 .d-half img{
     width: 75%;
@@ -37,8 +36,70 @@ h1{
 }
 body{
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    margin-left: 5px;
 }
 .p-center{
     text-align: center;
+}
+.flex{
+    display: flex;
+    margin: 50px;
+}
+.mis-qta{
+    width: 50%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+.mis-qta img{
+    width: 25%;
+}
+.font-size-20{
+    font-size: 20px;
+}
+.sec-2{
+    display: flex;
+
+    text-align: left;
+    margin: 2px;
+}
+.sec-2-ban{
+    background-image: url(img/shapes/shape-1.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 20%;
+}
+.sec-2 img{
+    width: 100%;
+}
+.sec-2-text{
+    text-align: left;
+}
+
+.sec-2-pra{
+    text-align: left;
+    width: 70%;
+    padding-left: 40px;
+}
+
+
+
+
+#m-1{
+    background-color: burlywood;
+}
+#m-2{
+    background-color: darkgrey;
+}
+#m-3{
+    background-color: gray;
+}
+#sec-2-img{
+    text-align: left;
+    padding-left: 10%;
+}
+#sec-2-img{
+    width: 30%;
 }
