--- a/style.css
+++ b/style.css
@@ -23,9 +23,12 @@ h1{
 }
 .sec-1{
     display: flex;
+    padding-bottom: 100px;
+    padding-top: 50px;
 }
 .d-half img{
-    width: 75%;
+    width: 55%;
+    padding-left: 150px;
 }
 .btn{
     text-decoration: none;
@@ -34,6 +37,8 @@ h1{
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 5px;
+    font-size: 15px;
+    text-decoration: none;
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -91,6 +96,25 @@ body{
     background-position: right bottom;
     background-size: 15%;
 }
+.sec-3{
+    display: flex;
+    text-align: left;
+    margin: 2px;
+    padding: 60px;
+}
+.sec-3-pra{
+    text-align: left;
+    width: 70%;
+    padding-left: 40px;
+    padding-right: 150px;
+    padding-top: 40px;
+}
+.sec-3-img{
+    width: 30%;
+}
+.mi{
+    padding-bottom: 50px;
+}
 footer{
     text-align: center;
     background-color: #0B0D17;
@@ -108,9 +132,8 @@ footer{
 }
 .footer-p{
     color: honeydew;
+    font-size: 15px;
 }
-
-
 
 #m-1{
     background-color: burlywood;
