--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
     padding-left: 20px;
 }
 .d-font{
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Yeseva One', cursive;
     font-size: 50px;
 }
 .bdr{
